my-apps/ai/ollama/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ollama
  namespace: ollama
spec:
  type: ClusterIP
  ports:
  - port: 11434
    targetPort: 11434
    protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: ollama
  namespace: ollama
subsets:
- addresses:
  - ip: 192.168.5.102
  ports:
  - port: 11434
    protocol: TCP
