my-apps/ai/ollama/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ollama
  namespace: ollama
spec:
  parentRefs:
  - name: gateway
    namespace: gateway
  hostnames:
  - "ai.serverops.live"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: ollama
      port: 11434
